GEODE-4275: Improved StartMemberUtils.addMaxHeap
- Added test methods.
- Modified the method to avoid adding `"-XX:+UseConcMarkSweepGC"` if
  the user already specified parameter as a jvm argument.
- Modified the logic to avoid setting the default value for
  `"-XX:CMSInitiatingOccupancyFraction="` if the user already specified
  one as a jvm argument.